@@ -37,7 +37,7 @@
 # that is actually run.
 # -----------------------------------------------------------------------------
 
-AC_INIT([JCCL], [0.19], [vrjuggler-devel@lists.sourceforge.net])
+AC_INIT([JCCL], [0.20], [vrjuggler-devel@lists.sourceforge.net])
 AC_CONFIG_HEADERS([common/jccl/jcclDefines.h])
 AC_PREREQ([2.53])
 AC_COPYRIGHT([VR Juggler is (C) Copyright 1998-2003 by Iowa State University])
@@ -378,8 +378,8 @@ beans='jccl_config.jar jccl_editors.jar jccl_rtrc.jar'
 #fi
 
 changequote(<<, >>)
-jccl_java_api_jars=`echo "$jars" | sed -e 's/\([A-Za-z]*\.jar\)/${prefix}\/bin\/\1/g' -e "s/ /$JCPS/g"`
-jccl_java_api_beans=`echo "$beans" | sed -e 's/\(jccl_[A-Za-z]*\.jar\)/${prefix}\/bin\/beans\/\1/g' -e "s/ /$JCPS/g"`
+jccl_java_api_jars=`echo "$jars" | sed -e 's/\([A-Za-z]*\.jar\)/${prefix}\/share\/jccl\/java\/\1/g' -e "s/ /$JCPS/g"`
+jccl_java_api_beans=`echo "$beans" | sed -e 's/\(jccl_[A-Za-z]*\.jar\)/${prefix}\/share\/jccl\/beans\/\1/g' -e "s/ /$JCPS/g"`
 jccl_java_api_jars="${jccl_java_api_jars}${JCPS}${jccl_java_api_beans}"
 changequote([, ])
 
@@ -465,6 +465,7 @@ AC_CONFIG_FILES([
    mtree/JCCL.data.dist
    mtree/JCCL.include.dist
    mtree/JCCL.install.dist
+   mtree/JCCL.java.dist
    mtree/JCCL.test.dist
    mtree/JCCL.tools.dist
    VARS.pl
