@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-29-2004 patrickh    Relocated the JCCL Java libraries to the directory
+                        $JCCL_BASE_DIR/share/jccl/java and the JCCL Beans to
+                        $JCCL_BASE_DIR/share/jccl/beans.
+                        NEW VERSION: 0.20.0
 Oct-18-2004 patrickh    Re-enabled validation of .jconf and .jdef files
                         loaded into the Java configuration editor Bean.
                         NEW VERSION: 0.19.2
